--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       padding: 20px;
       margin: 0;
       padding-top: 60px;
+      color: black;
     }
 
     .header {
@@ -89,39 +90,26 @@
       margin: 10px 0;
     }
 
+    .currency-line {
+      font-size: 14px;
+      margin-top: 6px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+    }
 
-            .currency-line {
-            font-size: 14px;
-            margin-top: 6px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
+    .currency {
+      display: flex;
+      align-items: center;
+      gap: 4px;
+      white-space: nowrap;
+    }
 
-        .currency {
-            display: flex;
-            align-items: center;
-            gap: 4px;
-            white-space: nowrap;
-        }
-
-        .currency img {
-            width: 16px;
-            height: 16px;
-        }
-
-        .contact-btn {
-            display: block;
-            background: #6ae476;
-            color: #0b5c10;
-            text-decoration: none;
-            padding: 12px;
-            border-radius: 25px;
-            margin-top: 15px;
-            font-size: 18px;
-            font-weight: bold;
-        }
+    .currency img {
+      width: 16px;
+      height: 16px;
+    }
 
     .contact-btn {
       display: block;
@@ -133,6 +121,7 @@
       margin-top: 15px;
       font-size: 18px;
       font-weight: bold;
+      transition: background-color 0.3s;
     }
 
     .contact-btn:hover {
@@ -169,22 +158,40 @@
       margin-top: 30px;
     }
 
-    /* Dark Mode */
+    /* Dark Mode styles */
     body.dark-mode {
       background-color: #121212;
-      color: #ffffff;
+      color: #e0e0e0;
     }
 
-    .dark-mode .package,
-    .dark-mode .header,
-    .dark-mode .footer,
-    .dark-mode .contact-btn {
-      background-color: #1e1e1e !important;
-      color: #f1f1f1 !important;
+    body.dark-mode .header,
+    body.dark-mode .footer {
+      background-color: #1e1e1e;
+      color: #e0e0e0;
     }
 
-    .dark-mode .contact-btn {
-      background-color: #388e3c !important;
+    body.dark-mode .package {
+      background-color: #2a2a2a;
+      box-shadow: 0 4px 10px rgba(255, 255, 255, 0.1);
+      color: #ddd;
+    }
+
+    body.dark-mode .package h2 {
+      background: rgba(255, 255, 255, 0.1);
+    }
+
+    body.dark-mode .price {
+      color: #f0c419;
+    }
+
+    body.dark-mode .contact-btn {
+      background-color: #388e3c;
+      color: #d0ffd0;
+    }
+
+    body.dark-mode .contact-btn:hover {
+      background-color: #56a65a;
+      color: white;
     }
 
     .dark-toggle {
@@ -196,12 +203,18 @@
       font-size: 24px;
       cursor: pointer;
       z-index: 2000;
+      color: #4CAF50;
+      transition: color 0.3s;
+    }
+
+    .dark-toggle:hover {
+      color: #81c784;
     }
   </style>
 </head>
 <body>
 
-<!-- 🌙 Dark Mode Toggle -->
+<!-- Dark Mode Toggle Button -->
 <button class="dark-toggle" id="darkToggle" title="Toggle dark mode">🌙</button>
 
 <div class="header">
@@ -213,73 +226,88 @@
 <div class="container"></div>
 
 <script>
-    const packages = [
-        { day: 1, gb: "1GB", price_usd:0.7, price_yuan:5, price_baht:20, price_mmk:3000 }, 
-        { day: 3, gb: "3GB", price_usd:1.0, price_yuan:7, price_baht:30, price_mmk:5000 }, 
-        { day: 5, gb: "5GB", price_usd:1.3, price_yuan:9, price_baht:40, price_mmk:7000 }, 
-        { day: 7, gb: "7GB", price_usd:1.6, price_yuan:11, price_baht:50, price_mmk:9000 },
+  const packages = [
+    { day: 1, gb: "1GB", price_usd:0.7, price_yuan:5, price_baht:20, price_mmk:3000 }, 
+    { day: 3, gb: "3GB", price_usd:1.0, price_yuan:7, price_baht:30, price_mmk:5000 }, 
+    { day: 5, gb: "5GB", price_usd:1.3, price_yuan:9, price_baht:40, price_mmk:7000 }, 
+    { day: 7, gb: "7GB", price_usd:1.6, price_yuan:11, price_baht:50, price_mmk:9000 },
 
-        { day: 1, gb: "3GB", price_usd:1.2, price_yuan:8, price_baht:30, price_mmk:4000 }, 
-        { day: 3, gb: "6GB", price_usd:1.8, price_yuan:10, price_baht:50, price_mmk:7000 }, 
-        { day: 5, gb: "9GB", price_usd:2.4, price_yuan:15, price_baht:70, price_mmk:9000 }, 
-        { day: 7, gb: "12GB", price_usd:3.0, price_yuan:20, price_baht:90, price_mmk:12000 },
+    { day: 1, gb: "3GB", price_usd:1.2, price_yuan:8, price_baht:30, price_mmk:4000 }, 
+    { day: 3, gb: "6GB", price_usd:1.8, price_yuan:10, price_baht:50, price_mmk:7000 }, 
+    { day: 5, gb: "9GB", price_usd:2.4, price_yuan:15, price_baht:70, price_mmk:9000 }, 
+    { day: 7, gb: "12GB", price_usd:3.0, price_yuan:20, price_baht:90, price_mmk:12000 },
 
-        { day: 1, gb: "10Mbps unlimited",  price_usd:1.7, price_yuan:10, price_baht:50, price_mmk:7000 }, 
-        { day: 3, gb: "10Mbps unlimited",  price_usd:2.5, price_yuan:15, price_baht:70, price_mmk:10000 },  
-        { day: 5, gb: "10Mbps unlimited",  price_usd:3.1, price_yuan:20, price_baht:110, price_mmk:13000 },  
-        { day: 7, gb: "10Mbps unlimited",  price_usd:3.8, price_yuan:25, price_baht:140, price_mmk:15000 },
+    { day: 1, gb: "10Mbps unlimited",  price_usd:1.7, price_yuan:10, price_baht:50, price_mmk:7000 }, 
+    { day: 3, gb: "10Mbps unlimited",  price_usd:2.5, price_yuan:15, price_baht:70, price_mmk:10000 },  
+    { day: 5, gb: "10Mbps unlimited",  price_usd:3.1, price_yuan:20, price_baht:110, price_mmk:13000 },  
+    { day: 7, gb: "10Mbps unlimited",  price_usd:3.8, price_yuan:25, price_baht:140, price_mmk:15000 },
 
-        { day: 1, gb: "Unlimited", price_usd:2.0, price_yuan:14, price_baht:60, price_mmk:8000 }, 
-        { day: 3, gb: "Unlimited", price_usd:2.7, price_yuan:19, price_baht:80, price_mmk:12000 },  
-        { day: 5, gb: "Unlimited", price_usd:3.4, price_yuan:24, price_baht:120, price_mmk:16000 }, 
-        { day: 7, gb: "Unlimited", price_usd:4.1, price_yuan:28, price_baht:150, price_mmk:20000 },
+    { day: 1, gb: "Unlimited", price_usd:2.0, price_yuan:14, price_baht:60, price_mmk:8000 }, 
+    { day: 3, gb: "Unlimited", price_usd:2.7, price_yuan:19, price_baht:80, price_mmk:12000 },  
+    { day: 5, gb: "Unlimited", price_usd:3.4, price_yuan:24, price_baht:120, price_mmk:16000 }, 
+    { day: 7, gb: "Unlimited", price_usd:4.1, price_yuan:28, price_baht:150, price_mmk:20000 },
 
-        { day: 30, gb: "Unlimited", price_usd:20, price_yuan:140, price_baht:600, price_mmk:80000 }
-    ];
+    { day: 30, gb: "Unlimited", price_usd:20, price_yuan:140, price_baht:600, price_mmk:80000 }
+  ];
 
-    function createPackageElement(pkg) {
-        const packageDiv = document.createElement("div");
-        packageDiv.classList.add("package");
+  function createPackageElement(pkg) {
+    const packageDiv = document.createElement("div");
+    packageDiv.classList.add("package");
 
-        packageDiv.innerHTML = `
-            <h2>AIS5G Internet</h2>
-            <p><strong>${pkg.gb}</strong></p>
-           <p class="price">
-    <strong>$${pkg.price_usd}</strong>
-    <div class="currency-line">
-        <span class="currency" title="Chinese Yuan">
+    packageDiv.innerHTML = `
+      <h2>AIS5G Internet</h2>
+      <p><strong>${pkg.gb}</strong></p>
+      <p class="price">
+        <strong>$${pkg.price_usd}</strong>
+        <div class="currency-line">
+          <span class="currency" title="Chinese Yuan">
             <img src="icons/yuan.png" alt="Yuan"> ${pkg.price_yuan}
-        </span>
-        <span class="currency" title="Thai Baht">
+          </span>
+          <span class="currency" title="Thai Baht">
             <img src="icons/baht.png" alt="Baht"> ${pkg.price_baht}
-        </span>
-        <span class="currency" title="Myanmar Kyat">
+          </span>
+          <span class="currency" title="Myanmar Kyat">
             <img src="icons/mmk.png" alt="MMK"> ${pkg.price_mmk}
-        </span>
-    </div>
-</p>
-            <div class="speed-container">
-                <p class="speed">${pkg.gb.toLowerCase().includes("unlimited") ? "" : "(up to 20-80Mbps)"}</p>
-                <p class="day">${pkg.day} Day</p>
-            </div>
-            <a href="contact.html" class="contact-btn">Contact</a>
-        `;
+          </span>
+        </div>
+      </p>
+      <div class="speed-container">
+        <p class="speed">${pkg.gb.toLowerCase().includes("unlimited") ? "" : "(up to 20-80Mbps)"}</p>
+        <p class="day">${pkg.day} Day</p>
+      </div>
+      <a href="contact.html" class="contact-btn">Contact</a>
+    `;
 
-        return packageDiv;
-    }
+    return packageDiv;
+  }
 
-    function renderPackages() {
-        const container = document.querySelector(".container");
-        const fragment = document.createDocumentFragment();
+  function renderPackages() {
+    const container = document.querySelector(".container");
+    const fragment = document.createDocumentFragment();
 
-        packages.forEach(pkg => {
-            fragment.appendChild(createPackageElement(pkg));
-        });
+    packages.forEach(pkg => {
+      fragment.appendChild(createPackageElement(pkg));
+    });
 
-        container.appendChild(fragment);
-    }
+    container.appendChild(fragment);
+  }
 
-    renderPackages();
+  renderPackages();
+
+  // Dark Mode toggle logic
+  const toggle = document.getElementById("darkToggle");
+  const darkModeEnabled = localStorage.getItem("darkMode") === "true";
+
+  if (darkModeEnabled) {
+    document.body.classList.add("dark-mode");
+    toggle.textContent = "🌞";
+  }
+
+  toggle.addEventListener("click", () => {
+    const isDark = document.body.classList.toggle("dark-mode");
+    toggle.textContent = isDark ? "🌞" : "🌙";
+    localStorage.setItem("darkMode", isDark);
+  });
 </script>
 
 <div class="footer">
