--- a/index.html
+++ b/index.html
@@ -258,16 +258,16 @@
       <h2>AIS5G Internet</h2>
       <p><strong>${pkg.gb}</strong></p>
       <p class="price">
-        <strong>$${pkg.price_usd}</strong>
+        <img src="icons/DollarBlue.png" alt="Bollar"><strong>$${pkg.price_usd}</strong>
         <div class="currency-line">
           <span class="currency" title="Chinese Yuan">
-            <img src="icons/yuan.png" alt="Yuan"> ${pkg.price_yuan}
+            <img src="icons/YuanOrange.png" alt="Yuan"> ${pkg.price_yuan}
           </span>
           <span class="currency" title="Thai Baht">
-            <img src="icons/baht.png" alt="Baht"> ${pkg.price_baht}
+            <img src="icons/BahtBlue.png" alt="Baht"> ${pkg.price_baht}
           </span>
           <span class="currency" title="Myanmar Kyat">
-            <img src="icons/mmk.png" alt="MMK"> ${pkg.price_mmk}
+            <img src="icons/KyatPink.png" alt="MMK"> ${pkg.price_mmk}
           </span>
         </div>
       </p>
