--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
       white-space: nowrap;
     }
 
+      .currency_main img {
+      width: 22px;
+      height: 22px;
+    }
+
     .currency img {
       width: 16px;
       height: 16px;
@@ -258,7 +263,7 @@
       <h2>AIS5G Internet</h2>
       <p><strong>${pkg.gb}</strong></p>
       <p class="price">
-        <img src="icons/DollarYellow.png" alt="Dollar"><strong>$${pkg.price_usd}</strong>
+        <img class=currency_main src="icons/DollarYellow.png" alt="Dollar"><strong>$${pkg.price_usd}</strong>
         <div class="currency-line">
           <span class="currency" title="Chinese Yuan">
             <img src="icons/YuanOrange.png" alt="Yuan"> ${pkg.price_yuan}
