--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <h2>AIS5G Internet</h2>
       <p><strong>${pkg.gb}</strong></p>
       <p class="price">
-        <img class=currency_main src="icons/DollarYellow.png" alt="Dollar"><strong>$${pkg.price_usd}</strong>
+        <img class="currency_main" src="icons/DollarYellow.png" alt="Dollar"><strong>$${pkg.price_usd}</strong>
         <div class="currency-line">
           <span class="currency" title="Chinese Yuan">
             <img src="icons/YuanOrange.png" alt="Yuan"> ${pkg.price_yuan}
