--- a/index.html
+++ b/index.html
@@ -111,6 +111,13 @@
       height: 22px;
     }
 
+    .currency_main {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      white-space: nowrap;
+    }
+
     .currency img {
       width: 16px;
       height: 16px;
